--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    <!--Title-->
+    <h1>Unsplash API - Infinite Scroll</h1>
+
+    <!--Loader-->
+    <div class="loader" id="loader">
+      <img src="./assets/images/loader.svg.svg" alt="loading" />
+    </div>
+
+    <!--Script-->
     <script href="./assets/script.js"></script>
   </body>
 </html>
