--- a/index.html
+++ b/index.html
@@ -12,24 +12,11 @@
     <h1>Unsplash API - Infinite Scroll</h1>
 
     <!--Loader-->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
       <img src="./assets/images/loader.svg.svg" alt="loading" />
     </div>
     <!--Image container-->
-    <div class="image-container" id="image-container">
-      <img
-        src="https://images.unsplash.com/photo-1682016149111-b6f316f6133c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1682016149111-b6f316f6133c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1682016149111-b6f316f6133c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
-        alt=""
-      />
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!--Script-->
     <script src="./assets/script.js"></script>
   </body>
